--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -62,7 +62,7 @@ services:
       - vhostd:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
     networks:
-      - chat-net
+      - chat-network
     labels:
         - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
 
@@ -77,7 +77,7 @@ services:
       - vhostd:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
     networks:
-      - chat-net
+      - chat-network
 
 networks:
   chat-network:
