--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,9 @@ version: "3.9"
 services:
   backend:
     container_name: backend
-    build: ./backend
+    build:
+      context: ./backend
+      dockerfile: dockerfile.prod
     depends_on:
       - db
     env_file:
@@ -17,7 +19,9 @@ services:
 
   frontend:
     container_name: frontend
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: dockerfile.prod
     depends_on:
       - backend
     volumes:
