Added doamin to nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,8 @@ http{
     server{
          listen 80 default_server;
          listen [::]:80 default_server;
+
+         server_name my-chat.xyz, www.my-chat.xyz;
          
          root   /usr/share/nginx/html;
          index  index.html index.htm;
