--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,12 +3,20 @@ events{
 }
 
 http{
-    server{
-         listen 80 default_server;
+    server {
+         listen         80 default_server;
          listen [::]:80 default_server;
-
          server_name my-chat.xyz, www.my-chat.xyz;
-         
+         root   /usr/share/nginx/html;
+         index  index.html index.htm;
+         try_files $uri /index.html =404;
+         return         301 https://$server_name$request_uri;
+    }
+    server{
+         listen         443 ssl;
+         server_name my-chat.xyz, www.my-chat.xyz;
+         add_header Strict-Transport-Security "max-age=31536000" always;
+
          root   /usr/share/nginx/html;
          index  index.html index.htm;
          try_files $uri /index.html =404;
