--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,74 +1,40 @@
-events{
-    worker_connections 768;
-}
+server {
+        listen 80;
+        server_name my-chat.xyz www.my-chat.xyz;
 
-http{
-    server {
-         listen         80 default_server;
-         listen [::]:80 default_server;
-         server_name my-chat.xyz, www.my-chat.xyz;
-         root   /usr/share/nginx/html;
-         index  index.html index.htm;
-         try_files $uri /index.html =404;
-         return         301 https://$server_name$request_uri;
+        location / {
+                proxy_pass http://frontend:3000;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+            }
+
+        location /api {
+                proxy_pass http://backend:8000;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+            }
+        
+        location /admin {
+                proxy_pass http://backend:8000;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+            }
+
+        location /accounts {
+                proxy_pass http://backend:8000;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+            }
     }
-    server{
-         listen         443 ssl;
-         server_name my-chat.xyz, www.my-chat.xyz;
-         add_header Strict-Transport-Security "max-age=31536000" always;
-
-         root   /usr/share/nginx/html;
-         index  index.html index.htm;
-         try_files $uri /index.html =404;
-
-         location / {
-             proxy_pass http://frontend:3000;
-             proxy_set_header X-Real-IP $remote_addr;
-             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-             proxy_set_header X-NginX-Proxy true;
-             proxy_set_header Host $http_host;
-             proxy_cache_bypass $http_upgrade;
-         }
-         location /admin {
-             proxy_pass http://backend:8000;
-             proxy_set_header X-Real-IP $remote_addr;
-             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-             proxy_set_header X-NginX-Proxy true;
-             proxy_set_header Host $http_host;
-             proxy_cache_bypass $http_upgrade;
-         }
-         location /register {
-             proxy_pass http://frontend:3000;
-             proxy_set_header X-Real-IP $remote_addr;
-             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-             proxy_set_header X-NginX-Proxy true;
-             proxy_set_header Host $http_host;
-             proxy_cache_bypass $http_upgrade;
-         }
-         location /login {
-             proxy_pass http://frontend:3000;
-             proxy_set_header X-Real-IP $remote_addr;
-             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-             proxy_set_header X-NginX-Proxy true;
-             proxy_set_header Host $http_host;
-             proxy_cache_bypass $http_upgrade;
-         }
-         location /api {
-             proxy_pass http://backend:8000;
-             proxy_set_header X-Real-IP $remote_addr;
-             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-             proxy_set_header X-NginX-Proxy true;
-             proxy_set_header Host $host;
-             proxy_cache_bypass $http_upgrade;
-             client_max_body_size 100M;
-         }
-         location /accounts {
-             proxy_set_header X-Real-IP $remote_addr;
-             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-             proxy_set_header X-NginX-Proxy true;
-             proxy_pass http://backend:8000;
-             proxy_set_header Host $http_host;
-             proxy_cache_bypass $http_upgrade;
-         }
-    }
-}
