Edited nginx.conf again with https key

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,9 @@
+events{
+    worker_connections 768;
+}
+
+https {
+
 server {
         listen 80;
         server_name my-chat.xyz www.my-chat.xyz;
@@ -37,4 +43,5 @@ server {
                 proxy_set_header Host $host;
                 proxy_cache_bypass $http_upgrade;
             }
+    }
     }
