--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,6 +35,14 @@ server {
                 proxy_cache_bypass $http_upgrade;
             }
 
+        location /register {
+                proxy_pass http://frontend:3000;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+            }
         location /accounts {
                 proxy_pass http://backend:8000;
                 proxy_http_version 1.1;
