Added max size client request for photo users

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,7 @@ http {
         listen 80;
         listen 443;
         server_name localhost www.my-chat.xyz my-chat.xyz;
+        client_max_body_size 100M;
 
         location / {
             proxy_pass http://frontend:3000;
