--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,7 +45,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
         location /accounts {
-            proxy_pass http://backend:8000;
+            proxy_pass https://backend:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
