--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -51,6 +51,7 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Forwarded-Host 'my-chat.xyz';
         }
     }
 }
