Added rewrite config in nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,9 +5,8 @@ events{
 http {
     server {
         listen 80;
-        listen 443;
         server_name localhost www.my-chat.xyz my-chat.xyz;
-        client_max_body_size 100M;
+        rewrite ^(.*) https://$server_name$1 permanent;
 
         location / {
             proxy_pass http://frontend:3000;
@@ -45,13 +44,12 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
         location /accounts {
-            proxy_pass https://backend:8000;
+            proxy_pass http://backend:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            proxy_set_header X-Forwarded-Host 'my-chat.xyz';
         }
     }
 }
