Added other server listening on 443 port

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,9 +4,15 @@ events{
 
 http {
     server {
+
         listen 80;
-        server_name localhost www.my-chat.xyz my-chat.xyz;
-        rewrite ^(.*) https://$server_name$1 permanent;
+        server_name www.my-chat.xyz my-chat.xyz;
+
+        rewrite ^/(.*)$ https://$host$request_uri? permanent; 
+    }
+    server {
+        listen 443;
+        server_name www.my-chat.xyz my-chat.xyz;
 
         location / {
             proxy_pass http://frontend:3000;
