Added nginx config file

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ events{
 http {
     server {
         listen 80;
-        server_name www.my-chat.xyz my-chat.xyz;
+        server_name localhost www.my-chat.xyz my-chat.xyz;
 
         location / {
             proxy_pass http://frontend:3000;
@@ -23,7 +23,9 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            client_max_body_size 8M;
+            proxy_set_header    X-Real-IP   $remote_addr;
+            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header    origin      'http://my-chat.xyz';
         }
     
         location /admin {
