Fixed login bug

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,7 @@ http {
     server {
         listen 80;
         server_name localhost www.my-chat.xyz my-chat.xyz;
+        client_max_body_size 10m;
 
         location / {
             proxy_pass http://frontend:3000;
